...
  String get languageEnglish => 'English';

  @override
  String get languageChinese => 'Chinese';

  @override
  String get about => 'About';

  @override
  String get version => 'Version';

  @override
  String get profile => 'Profile';

  @override
  String get preferences => 'Preferences';

  @override
  String get logout => 'Logout';

  @override
  String get cancel => 'Cancel';

  @override
  String get clear => 'Clear';
...
  String get podcast_no_subscriptions => 'No subscriptions yet';

  @override
  String get podcast_play => 'Play';

  @override
  String get home => 'Home';

  @override
  String get nav_feed => 'Library';

  @override
  String get nav_podcast => 'Discover';
...
